<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".atividade.CommentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:hint="@string/txtId"
            android:inputType="number"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/txtUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:hint="@string/txtUserId"
            android:inputType="number"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtNome"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/txtEmail"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/txtBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtBody1" />

        <Button
            android:id="@+id/btnAdicionarComments"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#3F803B"
            android:textColor="#E8E9EB"
            android:onClick="Adicionar"
            android:gravity="center"
            android:text="Adicionar" />

        <ListView
            android:id="@+id/listviewComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>